readme - added vm options used locally